--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="w3-bar-block">
       <a routerLink="/home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>  
-      <a routerLink="/crud" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">CRUD</a> 
+      <a routerLink="/manage_images" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Manage Images</a> 
     </div>
   </nav>
   
