fetch only once using service

--- a/src/app/components/crud/crud.component.html
+++ b/src/app/components/crud/crud.component.html
@@ -22,7 +22,7 @@
     <br/>
 
     <ul>
-      <!-- <li *ngFor="let image of images_array">{{image.description}}</li> -->
+      <li *ngFor="let image of getImageList()">{{image.description}}</li>
     </ul>
 
 </div>
